--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -38,18 +38,13 @@ jobs:
         run: |
           docker buildx build \
             --push \
-            --file ./docker/Dockerfile \
-            --tag ghcr.io/premai-io/prem-controller:latest \
-            --platform linux/arm64,linux/amd64 .
-          docker buildx build \
-            --push \
-            --file ./docker/m1/chat/llamacpp/Dockerfile \
+            --file ./prem-chat-x/docker/llamacpp/m1/Dockerfile \
             --build-arg="MODEL_ID=ggml-vicuna-7b-1.1-q4_2" \
             --tag ghcr.io/premai-io/prem-chat-ggml-vicuna-7b-1.1-q4_2-m1:latest \
-            --platform linux/arm64,linux/amd64 .
+            --platform linux/arm64,linux/amd64 ./prem-chat-x
           docker buildx build \
             --push \
-            --file ./docker/m1/chat/llamacpp/Dockerfile \
+            --file ./prem-chat-x/docker/llamacpp/m1/Dockerfile \
             --build-arg="MODEL_ID=gpt4all-lora-quantized-ggml" \
             --tag ghcr.io/premai-io/prem-chat-gpt4all-lora-quantized-ggml-m1:latest \
-            --platform linux/arm64,linux/amd64 .
+            --platform linux/arm64,linux/amd64 ./prem-chat-x
