--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,10 @@ env:
 
 on:
   pull_request:
-    branches: ["master", "main"]
-    paths-ignore: ["docs/**"]
+    branches: ["main"]
 
   push:
-    branches: ["master", "main"]
-    paths-ignore: ["docs/**"]
+    branches: ["main"]
 
 jobs:
   linter:
@@ -30,6 +28,7 @@ jobs:
 
   pytest:
     runs-on: ubuntu-latest
+    needs: [linter]
     steps:
       - name: Checkout Code Repository
         uses: actions/checkout@v3
@@ -42,3 +41,47 @@ jobs:
 
       - name: Tear down the Stack
         run: docker-compose down
+
+  push:
+    runs-on: ubuntu-latest
+    needs: [pytest]
+    permissions:
+      contents: read
+      packages: write
+    if: github.event_name == 'push'
+    env:
+      DOCKER_CLI_EXPERIMENTAL: "enabled"
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push the Images
+        run: |
+          docker buildx build \
+            --push \
+            --file ./prem-chat-x/docker/llamacpp/cpu/Dockerfile \
+            --build-arg="MODEL_ID=vicuna-7b-q4" \
+            --tag ghcr.io/premai-io/prem-chat-vicuna-7b-q4-cpu:latest \
+            --platform linux/arm64,linux/amd64 ./prem-chat-x
+          docker buildx build \
+            --push \
+            --file ./prem-chat-x/docker/llamacpp/cpu/Dockerfile \
+            --build-arg="MODEL_ID=gpt4all-lora-q4" \
+            --tag ghcr.io/premai-io/prem-chat-gpt4all-lora-q4-cpu:latest \
+            --platform linux/arm64,linux/amd64 ./prem-chat-x
