simplified model zoo and fixed pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run the tests
         run: |
-         docker run -it --rm --name prem-chat-vicuna-7b-q4-m1 prem-chat-llama-cpp-test pytest
+         docker run --rm --name prem-chat-vicuna-7b-q4-m1 prem-chat-llama-cpp-test pytest
 
       - name: Tear down the Stack
         run: docker stop
