fixing pipeline in self-hosted env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,10 @@ jobs:
         with:
           install: true
 
+      - name: Security issue on MacOS
+        run: |
+          security unlock-keychain
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
