--- a/prem-chat-dolly-v2/docker/gpu/Dockerfile
+++ b/prem-chat-dolly-v2/docker/gpu/Dockerfile
@@ -1,22 +1,17 @@
-FROM python:3.10-slim-bullseye
+FROM huggingface/transformers-pytorch-gpu:4.28.1
 
-ARG MODEL_ID
-
-RUN apt update && apt install -y libopenblas-dev ninja-build build-essential wget
-RUN python -m pip install --upgrade pip pytest cmake scikit-build setuptools
+RUN pip install "accelerate>=0.16.0,<1"
 
 WORKDIR /usr/src/app/
-
-RUN wget https://prem-models.s3.eu-central-1.amazonaws.com/${MODEL_ID}.bin
-RUN mkdir -p ./ml/models/
-RUN mv ${MODEL_ID}.bin ./ml/models/
 
 COPY requirements.txt ./
 
 RUN pip install --no-cache-dir -r ./requirements.txt --upgrade pip
 
+COPY download.py .
+
+RUN python3 download.py
+
 COPY . .
 
-ENV MODEL_ID=$MODEL_ID
-
-CMD python main.py
+CMD python3 main.py
