--- a/prem-chat-dolly-v2/docker/gpu/Dockerfile
+++ b/prem-chat-dolly-v2/docker/gpu/Dockerfile
@@ -1,5 +1,7 @@
 FROM huggingface/transformers-pytorch-gpu:4.28.1
 
+ARG MODEL_ID
+
 RUN pip install "accelerate>=0.16.0,<1"
 
 WORKDIR /usr/src/app/
@@ -13,5 +15,7 @@ COPY download.py .
 RUN python3 download.py
 
 COPY . .
+
+ENV MODEL_ID=$MODEL_ID
 
 CMD python3 main.py
