--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,29 +34,11 @@ jobs:
       - name: Checkout Code Repository
         uses: actions/checkout@v3
 
-      - name: Build the images
-        run: docker buildx build --file ./prem-chat-llama-cpp/docker/m1/Dockerfile --build-arg="MODEL_ID=vicuna-7b-q4" --tag prem-chat-llama-cpp ./prem-chat-llama-cpp
+      - name: Build and Test the Images for GPU devices
+        run: bash ./scripts/build_test_gpu.sh
 
-      - name: Run the tests
-        run: docker run --rm --name prem-chat-vicuna-7b-q4-m1 prem-chat-llama-cpp pytest
-
-      - name: Prune
-        run: docker system prune -a -f
-
-      - name: Build the images
-        run: docker buildx build --file ./prem-chat-dolly-v2/docker/gpu/Dockerfile --build-arg="MODEL_ID=dolly-v2-12b" --tag prem-chat-dolly-v2 ./prem-chat-dolly-v2
-
-      - name: Run the tests
-        run: docker run --rm --gpus all --name prem-chat-dolly-v2-12b prem-chat-dolly-v2 pytest
-
-      - name: Prune
-        run: docker system prune -a -f
-
-      - name: Build the images
-        run: docker buildx build --file ./prem-embeddings-st/docker/gpu/Dockerfile --build-arg="MODEL_ID=all-MiniLM-L6-v2" --tag prem-embeddings-st ./prem-embeddings-st
-
-      - name: Run the tests
-        run: docker run --rm --gpus all --name prem-embeddings-st prem-embeddings-st pytest
+      - name: Build and Test the Images for Mac M1 devices
+        run: bash ./scripts/build_test_m1.sh
 
   push:
     runs-on: gpu
@@ -85,37 +67,4 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push the Images
-        run: |
-          docker buildx build \
-            --push \
-            --file ./prem-chat-llama-cpp/docker/m1/Dockerfile \
-            --build-arg="MODEL_ID=vicuna-7b-q4" \
-            --tag ghcr.io/premai-io/prem-chat-vicuna-7b-q4-m1:latest \
-            --platform linux/arm64,linux/amd64 ./prem-chat-llama-cpp
-
-          docker system prune -f -a
-
-          docker buildx build \
-            --push \
-            --file ./prem-chat-llama-cpp/docker/m1/Dockerfile \
-            --build-arg="MODEL_ID=gpt4all-lora-q4" \
-            --tag ghcr.io/premai-io/prem-chat-gpt4all-lora-q4-m1:latest \
-            --platform linux/arm64,linux/amd64 ./prem-chat-llama-cpp
-
-          docker system prune -f -a
-
-          docker buildx build \
-            --push \
-            --file ./prem-chat-dolly-v2/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=dolly-v2-12b" \
-            --tag ghcr.io/premai-io/prem-chat-dolly-v2-12b-gpu:latest \
-            --platform linux/arm64,linux/amd64 ./dolly-v2-12b
-
-          docker system prune -f -a
-
-          docker buildx build \
-            --push \
-            --file ./prem-embeddings-st/docker/gpu/Dockerfile \
-            --build-arg="MODEL_ID=all-MiniLM-L6-v2" \
-            --tag ghcr.io/premai-io/prem-embeddings-all-MiniLM-L6-v2-gpu:latest \
-            --platform linux/arm64,linux/amd64 ./prem-embeddings-st
+        run: bash ./scripts/build_push.sh
