--- a/prem-embeddings-st/docker/gpu/Dockerfile
+++ b/prem-embeddings-st/docker/gpu/Dockerfile
@@ -1,6 +1,7 @@
 FROM huggingface/transformers-pytorch-gpu:latest
 
 ARG MODEL_ID
+ARG DEVICE
 
 WORKDIR /usr/src/app/
 
@@ -10,10 +11,11 @@ RUN pip install --no-cache-dir -r ./requirements.txt --upgrade pip
 
 COPY download.py .
 
-RUN python3 download.py
+RUN python3 download.py --model $MODEL_ID
 
 COPY . .
 
 ENV MODEL_ID=$MODEL_ID
+ENV DEVICE=$DEVICE
 
 CMD python3 main.py
