--- a/prem-michelangelo-sd/docker/m1/Dockerfile
+++ b/prem-michelangelo-sd/docker/m1/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.10-slim-bullseye
 
+ARG MODEL_ID
+ARG DEVICE
+
 WORKDIR /usr/src/app/
 
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -18,8 +21,11 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY download.py .
 
-RUN python3 download.py
+RUN python3 download.py --model $MODEL_ID
 
 COPY . .
+
+ENV MODEL_ID=$MODEL_ID
+ENV DEVICE=$DEVICE
 
 CMD python3 main.py
