--- a/.github/workflows/a2t-whisper.yml
+++ b/.github/workflows/a2t-whisper.yml
@@ -12,10 +12,10 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "audio-to-text-wh/**"
+      - "a2t-whisper/**"
 
 jobs:
-  ci-audio-to-text-whisper:
+  ci-a2t-whisper:
     runs-on: gpu
     permissions:
       contents: read
@@ -41,13 +41,13 @@ jobs:
 
     - name: Build the Images
       run: |
-        docker buildx build --file ./audio-to-text-wh/docker/cpu/Dockerfile --build-arg="MODEL_ID=tiny" --tag ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest --platform linux/arm64,linux/amd64 ./audio-to-text-wh
-        docker buildx build --file ./audio-to-text-wh/docker/gpu/Dockerfile --build-arg="MODEL_ID=large-v2" --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest --platform linux/arm64,linux/amd64 ./audio-to-text-wh
+        docker buildx build --file ./a2t-whisper/docker/cpu/Dockerfile --build-arg="MODEL_ID=tiny" --tag ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest --tag a2t-whisper-tiny-cpu --platform linux/arm64,linux/amd64 ./a2t-whisper
+        docker buildx build --file ./a2t-whisper/docker/gpu/Dockerfile --build-arg="MODEL_ID=large-v2" --tag ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest --tag a2t-whisper-large-v2-gpu --platform linux/arm64,linux/amd64 ./a2t-whisper
 
     - name: Test the Images
       run: |
-        docker run --rm ghcr.io/premai-io/audio-to-text-whisper-tiny-cpu:latest pytest
-        docker run --rm ghcr.io/premai-io/audio-to-text-whisper-large-v2-gpu:latest pytest
+        docker run --rm a2t-whisper-tiny-cpu pytest
+        docker run --rm a2t-whisper-large-v2-gpu pytest
 
     - name: Push the Images
       run: |
