--- a/.github/workflows/cpl-t5.yml
+++ b/.github/workflows/cpl-t5.yml
@@ -1,4 +1,4 @@
-name: Chat Dolly V2
+name: Copilot T5
 
 env:
   DOCKER_BUILDKIT: 1
@@ -9,15 +9,15 @@ on:
   pull_request:
     branches: ["main"]
     paths:
-      - "cht-dolly-v2/**"
+      - "cpl-t5/**"
 
   push:
     branches: ["main"]
     paths:
-      - "cht-dolly-v2/**"
+      - "cpl-t5/**"
 
 jobs:
-  test-cht-dolly-v2:
+  test-cpl-t5:
     runs-on: gpu
     permissions:
       contents: read
@@ -25,20 +25,20 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Test the Images
+    - name: Build and Push
       run: |
-        docker build --file ./cht-dolly-v2/docker/gpu/Dockerfile --build-arg="MODEL_ID=tiny" --tag cht-dolly-v2 ./cht-dolly-v2
-        docker run --rm --gpus all cht-dolly-v2 pytest
+        docker build --file ./cpl-t5/docker/cpu/Dockerfile --build-arg="MODEL_ID=Salesforce/codet5p-220m-py" --tag cpl-t5-cpu --platform linux/arm64,linux/amd64 ./cpl-t5
+        docker run --rm cpl-t5-cpu pytest
 
-  push-cht-dolly-v2:
+  push-cpl-t5:
     runs-on: gpu
-    needs: [test-cht-dolly-v2]
+    needs: [test-cpl-t5]
     permissions:
       contents: read
       packages: write
     if: github.event_name == 'push'
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -57,4 +57,4 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and Push
-      run: docker buildx build --push --file ./cht-dolly-v2/docker/gpu/Dockerfile --build-arg="MODEL_ID=databricks/dolly-v2-12b" --tag ghcr.io/premai-io/chat-dolly-v2-12b-gpu:latest --platform linux/arm64,linux/amd64 ./chat-dolly-v2
+      run: docker buildx build --push --file ./cpl-t5/docker/cpu/Dockerfile --build-arg="MODEL_ID=Salesforce/codet5p-220m-py" --tag ghcr.io/premai-io/copilot-codet5p-220m-py-cpu:latest --platform linux/arm64,linux/amd64 ./cpl-t5
