--- a/cpl-t5/requirements.txt
+++ b/cpl-t5/requirements.txt
@@ -5,6 +5,7 @@ requests==2.28.2
 tqdm==4.65.0
 httpx==0.23.3
 python-dotenv==1.0.0
+tenacity==8.2.2
 torch==2.0.1
 torchvision==0.15.2
 torchaudio==2.0.2
